# Game-Engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
engine/: CMakeLists.txt
engine/include/: application.h  camera.h  collision.h  component.h  components.h  core.h  defines.h  engine.h  entity.h  entity_manager.h  gltf_loading.h  handles.h  input.h  lights.h  material_manager.h  material_structs.h  mesh_manager.h  mesh_serialization.h  mesh_structs.h  message.h  message_queue.h  message_type.h  obj_loading.h  platform.h  render_context.h  render_object.h  renderer_images.h  renderer_types.h  renderer_vk_buffers.h  renderer_vk_descriptors.h  renderer_vk_images.h  renderer_vk_pipelines.h  renderer_vk_structures.h  renderer_vk_types.h  renderer_vk_utility.h  texture_manager.h  texture_structs.h  types.h  utility.h  vertex.h  (+10 more)
engine/include/ecs/: component.h  component_array.h  component_manager.h  constants.h  coordinator.h  default_cube.h  ecs_constants.h  ecs_typedefs.h  entity.h  entity_manager.h  typedefs.h
engine/include/renderer/: context.h
engine/include/vulkan/: buffer.h  command_buffer.h
engine/shaders/: shader.vert
engine/src/: application.cpp  collision.cpp  components.cpp  engine.cpp  entity.cpp  entity_manager.cpp  gltf_loading.cpp  input.cpp  material_manager.cpp  mesh_manager.cpp  mesh_serialization.cpp  message.cpp  message_queue.cpp  pipeline_compute.cpp  pipeline_imgui.cpp  pipeline_rasterized.cpp  pipeline_raytracing.cpp  pipeline_shadowmap.cpp  renderer_images.cpp  renderer_vk_buffers.cpp  renderer_vk_descriptors.cpp  renderer_vk_images.cpp  renderer_vk_pipelines.cpp  renderer_vk_structures.cpp  renderer_vk_utility.cpp  stb_image.cpp  texture_manager.cpp  vk_buffers.cpp  vk_descriptors.cpp  vk_images.cpp  vk_immediate.cpp  vk_raytracing.cpp  vk_structures.cpp  vk_utility.cpp
engine/src/ecs/: component_array.cpp  component_manager.cpp  entity_manager.cpp
forward_renderer/: CMakeLists.txt
forward_renderer/include/: forward_renderer.h  scene.h
forward_renderer/include/components/: name.h  renderer.h  transform.h
forward_renderer/models/sponza/: sponza.mtl
forward_renderer/shaders/: forward_input.glsl  gradient.comp
forward_renderer/src/: forward_renderer.cpp  main.cpp  pipeline_rasterized.cpp  pipeline_shadowmap.cpp  scene.cpp
forward_renderer/src/systems/: camera_system.cpp  render_system.cpp  transform_gui_system.cpp
game/: CMakeLists.txt
game/assets/materials/: default.mtl  mirror.mtl  plane.mtl  sphere.mtl  vokselia_spawn.mtl
game/assets/shaders/: colored_triangle_frag.frag  colored_triangle_vert.vert  input.glsl  lighting.glsl  lit_phong_frag.frag  lit_phong_vert.vert  shadowmap_vert.vert  vertex_shader.vert
game/include/: acceleration_structures.h  component.h  components.h  entity.h  sandbox.h  scene.h
game/include/components/: renderer.h  transform.h
game/include/systems/: camera_system.h  collision_system.h  physics_system.h  render_system.h  resource_system.h  rt_render_system.h  transform_gui_system.h
game/models/crytek_sponza/: sponza.mtl
game/models/sphere/: sphere.mtl
game/shaders/: common.glsl  forward_input.glsl  gradient_color.comp  input.glsl  lighting.glsl  lit.frag  lit.vert  lit_phong_frag.frag  lit_phong_vert.vert  random.glsl  raygen.rgen  rt.rahit  rt.rchit  rt.rgen  rt.rmiss  rt_common.glsl  rt_input.glsl  rt_shadow.rmiss  shadowmap_vert.vert
game/src/: acceleration_structures.cpp  component.cpp  components.cpp  entity.cpp  gui.cpp  main.cpp  sandbox.cpp  scenes.cpp
game/src/systems/: camera_system.cpp  physics_system.cpp  render_system.cpp  resource_system.cpp  rt_render_system.cpp
ray_tracer/: CMakeLists.txt
ray_tracer/include/: acceleration_structures.h  sandbox.h  scene.h
ray_tracer/include/components/: camera.h  transform.h
ray_tracer/include/systems/: render_system.h  rt_render_system.h
ray_tracer/models/plane/: plane.mtl
ray_tracer/models/teapot/: default.mtl
ray_tracer/shaders/: constants.glsl  random.glsl  rt.rahit  rt.rchit  rt.rgen  rt.rmiss  rt_input.glsl
ray_tracer/src/: acceleration_structures.cpp  gui.cpp  main.cpp  pipeline_raytracing.cpp  sandbox.cpp  scene.cpp  scenes.cpp
ray_tracer/src/systems/: camera_system.cpp  render_system.cpp  resource_system.cpp  rt_render_system.cpp  transform_gui_system.cpp
